--- a/Desenho.html
+++ b/Desenho.html
@@ -29,15 +29,15 @@
 									<li>
 										<a href="#" class="icon fa-bar-chart-o"><span>Áreas</span></a>
 										<ul>
-											<li><a href="#">Desenho</a></li>
-											<li><a href="#">Pintura</a></li>
-											<li><a href="#">Escultura</a></li>
-											<li><a href="#">Cerâmica</a></li>
-											<li><a href="#">Fotografia</a></li>
-											<li><a href="#">Arte multimédia</a></li>
-											<li><a href="#">Representação Digital</a></li>
-											<li><a href="#">Design Gráfico</a></li>
-											<li><a href="#">Design de Produto</a></li>
+											<li><a href="Desenho.html">Desenho</a></li>
+											<li><a href="Pintura.html">Pintura</a></li>
+											<li><a href="Escultura.html">Escultura</a></li>
+											<li><a href="Cerâmica.html">Cerâmica</a></li>
+											<li><a href="Fotografia.html">Fotografia</a></li>
+											<li><a href="Artemultimédia.html">Arte multimédia</a></li>
+											<li><a href="Representaçãodigital.html">Representação Digital</a></li>
+											<li><a href="Designgráfico.html">Design Gráfico</a></li>
+											<li><a href="Designdeproduto.html">Design de Produto</a></li>
 										</ul>
 									</li>
 									<li><a class="icon fa-cog" href="no-sidebar.html"><span>No sidebar </span></a></li>
@@ -52,40 +52,75 @@
 						<div id="content">
 
 							<!-- Post -->
-								<article class="box post">
+
 									<header>
-										<h2>Projetos da Licenciatura de Artes Visuais e Tecnologias na ESELx</h2>
-									</header>
-									<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
-									<h3>And yeah, that's basically it</h3>
-									<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-									ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-									sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-									Curabitur leo nibh, rutrum eu malesuada in tristique</p>
-									<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat
-									Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit ligula
-									vel quam viverra sit amet mollis tortor congue. Sed quis mauris sit amet
-									magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada in,
-									tristique Curabitur leo nibh, rutrum eu malesuada  in, tristique
-									at erat lorem ipsum dolor sit amet lorem ipsum sed consequat magna
-									tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros consequat
-									magna tempus</p>
-									<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-									ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-									sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-									Curabitur leo nibh, rutrum eu malesuada in tristique</p>
+										<h2>Desenho</h2>
+                    </header>
+
+										<div class="row aln-center">
+											<div class="col-4 col-6-medium col-12-small">
+									     									<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+												</section>
+							        	</div>
+
+												<div class="col-4 col-6-medium col-12-small">
+								<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
+												</section>
+							        	</div>
+												<div class="col-4 col-6-medium col-12-small">
+
+												<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic11.jpg" alt="" /></a>
+												</section>
+												</div>
+
+												<div class="col-4 col-6-medium col-12-small">
+
+												<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic12.jpg" alt="" /></a>
+												</section>
+												</div>
+
+												<div class="col-4 col-6-medium col-12-small">
+
+												<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic13.jpg" alt="" /></a>
+												</section>
+												</div>
+
+												<div class="col-4 col-6-medium col-12-small">
+
+												<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic14.jpg" alt="" /></a>
+												</section>
+												</div>
+
+												<div class="col-4 col-6-medium col-12-small">
+
+												<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic15.jpg" alt="" /></a>
+												</section>
+												</div>
+
+												<div class="col-4 col-6-medium col-12-small">
+
+												<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic16.jpg" alt="" /></a>
+												</section>
+												</div>
+
+<
+							    <article>
 									<h3>Accumsan lorem ipsum veroeros</h3>
 									<p>Consequat Phasellus laoreet massa id in, tristique at erat lorem
 									ipsum dolor sit amet lorem ipsum sed consequat magna tempus veroeros
@@ -103,113 +138,91 @@
 									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
 									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
 									Curabitur leo nibh, rutrum eu malesuada in tristique</p>
-									<h3>Ligula suspcipit fusce veroeros</h3>
-									<p>Nullam dolore etiam sed massa id in, tristique at erat lorem
-									ipsum dolor sit amet lorem ipsum sed consequat magna tempus veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna.</p>
-									<p>Sed massa id justo mattis pharetra. Fusce suscipit
-									ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-									sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan.</p>
+
 								</article>
 
 						</div>
 					</div>
 				</section>
 
-			<!-- Footer -->
-				<section id="footer">
-					<div class="container">
-						<header>
-							<h2>Questions or comments? <strong>Get in touch:</strong></h2>
-						</header>
-						<div class="row">
-							<div class="col-6 col-12-medium">
-								<section>
-									<form method="post" action="#">
-										<div class="row gtr-50">
+				<!-- Footer -->
+					<section id="footer">
+						<div class="container">
+							<header>
+								<h2>Questions or comments? <strong>Get in touch:</strong></h2>
+							</header>
+							<div class="row">
+								<div class="col-6 col-12-medium">
+									<section>
+										<form method="post" action="#">
+											<div class="row gtr-50">
+												<div class="col-6 col-12-small">
+													<input name="name" placeholder="Name" type="text" />
+												</div>
+												<div class="col-6 col-12-small">
+													<input name="email" placeholder="Email" type="text" />
+												</div>
+												<div class="col-12">
+													<textarea name="message" placeholder="Message"></textarea>
+												</div>
+												<div class="col-12">
+													<a href="#" class="form-button-submit button icon fa-envelope">Send Message</a>
+												</div>
+											</div>
+										</form>
+									</section>
+								</div>
+								<div class="col-6 col-12-medium">
+									<section>
+										<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet
+										mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur
+										leo nibh, rutrum eu malesuada.</p>
+										<div class="row">
 											<div class="col-6 col-12-small">
-												<input name="name" placeholder="Name" type="text" />
+												<ul class="icons">
+													<li class="icon fa-home">
+														Lisboa, Portugal
+													</li>
+													<li class="icon fa-phone">
+														+351 999 999 999
+													</li>
+													<li class="icon fa-envelope">
+														<a href="#">mica.neves98@gmail.com</a>
+													</li>
+												</ul>
 											</div>
 											<div class="col-6 col-12-small">
-												<input name="email" placeholder="Email" type="text" />
-											</div>
-											<div class="col-12">
-												<textarea name="message" placeholder="Message"></textarea>
-											</div>
-											<div class="col-12">
-												<a href="#" class="form-button-submit button icon fa-envelope">Send Message</a>
-											</div>
-										</div>
-									</form>
-								</section>
-							</div>
-							<div class="col-6 col-12-medium">
-								<section>
-									<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur
-									leo nibh, rutrum eu malesuada.</p>
-									<div class="row">
-										<div class="col-6 col-12-small">
-											<ul class="icons">
-												<li class="icon fa-home">
-													1234 Somewhere Road<br />
-													Nashville, TN 00000<br />
-													USA
-												</li>
-												<li class="icon fa-phone">
-													(000) 000-0000
-												</li>
-												<li class="icon fa-envelope">
-													<a href="#">info@untitled.tld</a>
-												</li>
-											</ul>
-										</div>
-										<div class="col-6 col-12-small">
-											<ul class="icons">
-												<li class="icon fa-twitter">
-													<a href="#">@untitled</a>
-												</li>
+												<ul class="icons">
 												<li class="icon fa-instagram">
-													<a href="#">instagram.com/untitled</a>
-												</li>
-												<li class="icon fa-dribbble">
-													<a href="#">dribbble.com/untitled</a>
-												</li>
-												<li class="icon fa-facebook">
-													<a href="#">facebook.com/untitled</a>
-												</li>
-											</ul>
+														<a href="#">instagram.com/ella_neves_art/</a>
+													</li>
+													</li>
+													<li class="icon fa-facebook">
+														<a href="#">facebook.com/
+													</li>
+												</ul>
+											</div>
 										</div>
-									</div>
-								</section>
+									</section>
+								</div>
 							</div>
 						</div>
-					</div>
-					<div id="copyright" class="container">
-						<ul class="links">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</div>
-				</section>
+						<div id="copyright" class="container">
+							<ul class="links">
+								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							</ul>
+						</div>
+					</section>
 
-		</div>
+				</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+				<!-- Scripts -->
+				<script src="assets/js/jquery.min.js"></script>
+				<script src="assets/js/jquery.dropotron.min.js"></script>
+				<script src="assets/js/browser.min.js"></script>
+				<script src="assets/js/breakpoints.min.js"></script>
+				<script src="assets/js/util.js"></script>
+				<script src="assets/js/main.js"></script>
 
-	</body>
-</html>
+				</body>
+				</html>
