--- a/Fotografia.html
+++ b/Fotografia.html
@@ -54,28 +54,28 @@
 							<!-- Post -->
 
 									<header>
-										<h2>Escultura</h2>
+										<h2>Fotografia</h2>
                     </header>
 
 										<div class="row aln-center">
 											<div class="col-4 col-6-medium col-12-small">
 									     									<!-- Feature -->
 												<section>
-													<a href="" class="image featured"><img src="images/pic25.jpg" alt="" /></a>
+													<a href="" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 												</section>
 							        	</div>
 
 												<div class="col-4 col-6-medium col-12-small">
 								<!-- Feature -->
 												<section>
-													<a href="" class="image featured"><img src="images/pic26.jpg" alt="" /></a>
+													<a href="" class="image featured"><img src="images/pic34.jpg" alt="" /></a>
 												</section>
 							        	</div>
 												<div class="col-4 col-6-medium col-12-small">
 
 												<!-- Feature -->
 												<section>
-													<a href="" class="image featured"><img src="images/pic27.jpg" alt="" /></a>
+													<a href="" class="image featured"><img src="images/pic35.jpg" alt="" /></a>
 												</section>
 												</div>
 
@@ -83,22 +83,12 @@
 
 												<!-- Feature -->
 												<section>
-													<a href="" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+													<a href="" class="image featured"><img src="images/pic35.jpg" alt="" /></a>
 												</section>
 												</div>
-
-												<div class="col-4 col-6-medium col-12-small">
-
-												<!-- Feature -->
-												<section>
-													<a href="" class="image featured"><img src="images/pic28.jpg" alt="" /></a>
-												</section>
-												</div>
-
-
 
 							    <article>
-									<h3>Projetos de Escultura</h3>
+									<h3>Projetos de Fotografia</h3>
 									<p> Resultado de vários projetos artísticos para a unidade curriculare de Escultura. </p>
 
 
